--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular-devkit/build-angular": "^17.3.9",
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.15.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
